--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>Hello ReactJS + Spring Boot</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/base.css" rel="stylesheet" />
 </head>
 
 <body>
