--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -4,8 +4,7 @@ body {
     font-size: 15px;
     line-height: 1.7;
     margin: 0;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding: 40px;
 }
 
 a {
@@ -39,6 +38,7 @@ h1 {
     font-weight: bold;
     margin: 0 0 15px;
     padding: 0;
+    text-align: center;
 }
 
 h2 {
@@ -64,3 +64,28 @@ ul {
 
 
 /* Customised */
+.form-address {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+.form-address .form-address-heading,
+.form-address .checkbox {
+    margin-bottom: 10px;
+}
+.form-address .checkbox {
+    font-weight: normal;
+}
+.form-address .form-control {
+    position: relative;
+    height: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
+    margin: 15px 0 15px 0;
+}
+.form-address .form-control:focus {
+    z-index: 2;
+}
