--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
     <meta charset="UTF-8"/>
-    <title>Hello ReactJS + Spring Boot</title>
+    <title>QR as Postal Address</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/base.css" rel="stylesheet" />
 </head>
@@ -14,7 +14,7 @@
     <script src="http://fb.me/react-0.14.0.js" th:src="@{/webjars/react/0.14.0/react.min.js}"></script>
     <script src="http://code.jquery.com/jquery-1.11.3.min.js" th:src="@{/webjars/jquery/1.11.3/jquery.min.js}"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js" th:src="@{/webjars/showdown/0.3.1/compressed/showdown.js}"></script>
-    <script src="../static/tutorial.js" th:src="tutorial.js"></script>
+    <script src="../static/app.js" th:src="app.js"></script>
     <script type="text/javascript" th:inline="javascript">
         $(function () {
             var initialData = JSON.parse(/*[[${initialData}]]*/ '[]');
