Fix dropbox display issue in Chrome Mac version

--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -81,7 +81,7 @@ ul {
 
 .form-address .form-control {
     position: relative;
-    height: auto;
+    height: 45px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
