--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,8 @@
     <script type="text/javascript" th:inline="javascript">
         $(function () {
             var initialData = JSON.parse(/*[[${initialData}]]*/ '[]');
+            var streetTypeList = /*[[${streetTypeList}]]*/ '[]';
+
             renderOnClient(initialData);
         });
     </script>
