Add all suburbs into dropdown list

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,8 +19,9 @@
         $(function () {
             var initialData = JSON.parse(/*[[${initialData}]]*/ '[]');
             var streetTypeData = /*[[${streetTypeList}]]*/ '[]';
+            var suburbData = /*[[${suburbList}]]*/ '[]';
 
-            renderOnClient(initialData, streetTypeData);
+            renderOnClient(initialData, streetTypeData, suburbData);
         });
     </script>
 
