Update Google Maps JavaScript due to its change

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
 
     <script src="http://fb.me/react-0.14.0.js" th:src="@{/webjars/react/0.14.0/react.min.js}"></script>
     <script src="http://code.jquery.com/jquery-1.11.3.min.js" th:src="@{/webjars/jquery/1.11.3/jquery.min.js}"></script>
-    <!-- Copy of http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places -->
+    <!-- A copy of "http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places" -->
     <script src="../static/google-maps.js" th:src="google-maps.js"></script>
     <script src="../static/qrcode.js" th:src="qrcode.js"></script>
     <script src="../static/maps.js" th:src="maps.js"></script>
